test/sema/example_8.colgm
func branch_with_return() -> i64 {
    var a = 1
    if (a == 1) {
        return 1
    } else if (a == 2) {
        return 2
    } else {
        return 3
    }

    return 4
}
